# django_site

./: .env.template  Dockerfile  docker-compose.yaml  pyproject.toml  requirements.txt
mysite/myauth/: views.py
mysite/mysite/: settings.py
mysite/shopapp/: models.py  serializers.py  urls.py  views.py
mysite/shopapp/templates/shopapp/: shop-index.html  user-orders.html
